--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Valh/Desktop/CA_GearScriptRepo/CommonLibs/gson-2.6.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Valh/Desktop/CA_GearScriptRepo/CommonLibs/guava-27.0.1-jre.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
